api: add enpoint to get recorded video chunks (#270)
* api: add enpoint to get recorded video chunks

* Delete upgrade file
