# apps/ex_nvr_web/priv/static/openapi.yaml
@@ -191,6 +191,36 @@ paths:
                 $ref: '#/components/schemas/Device'
         '400':
           $ref: "#/components/responses/BadArg"
+  /api/recordings/chunks:
+    get:
+      summary: Get recordings chunks
+      description: | 
+        Get all the recorded videos chunks order by decreasing start date.
+      operationId: getRecordingChunks
+      tags:
+        - Recording
+      parameters:
+        - $ref: '#/components/parameters/filters'
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/page_size'
+        - $ref: '#/components/parameters/order_by'
+        - $ref: '#/components/parameters/order_directions'
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Recording'
+                  meta:
+                    $ref: '#/components/schemas/ResultMeta'
+        '400':
+          $ref: "#/components/responses/BadArg"
   /api/devices/{device_id}/recordings:
     get:
       summary: Get recordings
@@ -506,6 +536,17 @@ components:
       scheme: bearer
       bearerFormat: opaque
   schemas:
+    Credentials:
+      type: object
+      description: Streaming Device credentials (Only when Device type is ip)
+      properties:
+        username:
+          type: string
+          description: Username to authenticate
+        password:
+          type: string
+          format: password
+          description: Password to authenticate
     Device:
       type: object
       properties:
@@ -532,33 +573,6 @@ components:
           $ref: "#/components/schemas/Credentials"
         settings:
           $ref: "#/components/schemas/DeviceSettings"
-    StreamConfig:
-      type: object
-      description: Device stream configuration
-      properties:
-        stream_uri:
-          type: string
-          format: uri
-          description: The RTSP URL where to get the video stream (Only when Device type is ip)
-        substream_uri:
-          type: string
-          format: uri
-          description: The RTSP URL where to get the video sub-stream (Only when Device type is ip)
-        location: 
-          type: string
-          format: path
-          description: The Path of the file location to be used as a streaming source (Only when Device type is file)
-    Credentials:
-      type: object
-      description: Streaming Device credentials (Only when Device type is ip)
-      properties:
-        username:
-          type: string
-          description: Username to authenticate
-        password:
-          type: string
-          format: password
-          description: Password to authenticate
     DeviceSettings:
       type: object
       description: Device settings that controls how the device behaves.
@@ -586,6 +600,54 @@ components:
         details:
           type: object
           description: Other details related to the error.
+    Recording:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Recording unique id
+        filename:
+          type: string
+          description: The filename of the recording
+        start_date:
+          type: string
+          format: date-time
+          description: The start date of the recording
+        end_date:
+          type: string
+          format: date-time
+          description: The end date of the recording
+        device_id:
+          type: string
+          format: uuid
+          description: The device id where this recording belongs
+    ResultMeta:
+      type: object
+      properties:
+        current_page:
+          type: integer
+        page_size:
+          type: integer
+        total_count:
+          type: integer
+        total_pages:
+          type: integer
+    StreamConfig:
+      type: object
+      description: Device stream configuration
+      properties:
+        stream_uri:
+          type: string
+          format: uri
+          description: The RTSP URL where to get the video stream (Only when Device type is ip)
+        substream_uri:
+          type: string
+          format: uri
+          description: The RTSP URL where to get the video sub-stream (Only when Device type is ip)
+        location: 
+          type: string
+          format: path
+          description: The Path of the file location to be used as a streaming source (Only when Device type is file)
   parameters:
     device_id:
       name: device_id
@@ -604,6 +666,78 @@ components:
       schema:
         type: string
       example: 11236565645.mp4
+    filters:
+      name: filters
+      in: query
+      required: false
+      explode: true
+      description: |
+        Apply a filter.
+
+        An example:
+        ```
+        filters[0][field]=device_id&filters[0][value]=value1&filters[1][field]=start_date&filters[1][op]=>=&filters[1][value]=2023-11-27T10:00:00Z
+        ```
+      schema:
+        type: array
+        items:
+          type: object
+          properties:
+            field:
+              type: string
+              description: The field to filter on
+            op:
+              type: string
+              description: The operator to use for comparison
+            value:
+              type: string
+              description: The value of the filter
+    order_by:
+      name: order_by[]
+      in: query
+      required: false
+      explode: true
+      description: |
+        Order by a field.
+
+        An example:
+        ```
+        order_by[]=name&order_by[]=age
+        ```
+      schema:
+        type: array
+        items:
+          type: string
+    order_directions:
+      name: order_directions[]
+      in: query
+      required: false
+      description: |
+        Specify the order direction.
+
+        An example:
+        ```
+        order_directions[]=asc&order_directions[]=desc
+        ```
+      schema:
+        type: array
+        items:
+          type: string
+    page:
+      name: page
+      in: query
+      required: false
+      explode: true
+      description: The requested page number
+      schema:
+        type: integer
+    page_size:
+      name: page_size
+      in: query
+      required: false
+      description: The size of the requested page.
+      schema:
+        type: integer
   responses:
     BadArg:
       description: Bad Arguments
